# Gen-AI

Projects/1. Text Summarizer Starter/: .gitignore  Dockerfile  README.md
Projects/1. Text Summarizer Starter/app/: main.py
Projects/1. Text Summarizer Starter/app/models/: summarizer.py
Projects/1. Text Summarizer Starter/app/schemas/: request_response.py
Projects/1. Text Summarizer Starter/app/services/: summarization.py
Projects/1. Text Summarizer Starter/workflows/: ci.yml
Projects/2. qa_bot_mini-rag/: .env  README.md  main.py  pyproject.toml  requirements.txt
Projects/2. qa_bot_mini-rag/app/: ingest.py  main.py  prompt.py  qa.py
Projects/2. qa_bot_mini-rag/data/faiss_index/: index.faiss  meta.pkl
Projects/2. qa_bot_mini-rag/ui/: app.py
Projects/3. qa_bot_pro/: README.md  main.py  pyproject.toml  requirements.txt  test.py
Projects/3. qa_bot_pro/app/: chunking.py  config.py  document_loaders.py  embeddings.py  rag.py  retrieval.py  vectorstore.py
Projects/3. qa_bot_pro/data/documents/: Orellys machine learning from scratch.txt
Projects/3. qa_bot_pro/data/faiss_index/: index.faiss  index.pkl
Projects/3. qa_bot_pro/ui/: main.py
