[project]
name = "qa-bot-mini-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "docx2txt>=0.1",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.128.0",
    "google>=3.0.0",
    "google-genai>=1.59.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=5.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.38.0",
    "uvicorn>=0.40.0",
]
